# Freeze-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md
.ccls-cache/@home@revanth@Dev@opengl@opengl-engine/: engine@platform@linux@build_path.h.blob
assets/shaders/: Player.frag
engine/assets/shaders/: Quad.frag  Quad.vert
engine/src/: Application.cpp  Buffer.cpp  Camera.cpp  EngineWindow.cpp  EntryPoint.cpp  KeyboardInput.cpp  MouseInput.cpp  PhysicsBody.cpp  RenderCommands.cpp  Renderer2D.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  VertexArray.cpp  Window.cpp
engine/src/core/: Application.cpp  Core.h
engine/src/engine/: EngineWindow.cpp  KeyboardEvent.cpp
engine/src/include/: Application.h  EngineWindow.h  Shader.h  Texture.h  Window.h
engine/src/input/: KeyboardInput.cpp
engine/src/physics/: Box2DDebugRenderer.cpp  Box2DDebugRenderer.h  InitPhysics.h  PhysicsBody.cpp  PhysicsBody.h
engine/src/renderer/: Camera.cpp  Camera.h  Renderer2D.cpp  Renderer2D.h
engine_updates/: about.txt
sandbox/: RenderTriangle.cpp  RenderTriangle.h
sandbox/shaders/: Player.frag  Player.vert  Sandbox.frag  Sandbox.vert
sandbox/src/: Entity.h  Player.cpp  Player.h  RenderTriangle.h  Sandbox.cpp  Sandbox.h  SandboxApp.cpp  SandboxExample.cpp  SandboxExample.h  World.cpp  World.h
shaders/: SandboxExample.frag  SandboxExample.vert  SandboxExample.vs
src/: Application.cpp
src/engine/: EngineWindow.cpp  EngineWindow.h  RenderCommands.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/engine-testing/: RenderTriangle.cpp  RenderTriangle.h
(+27 files in other folders)
